src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>C_digo_para_cargas__c</fullName>
        <formula>Id</formula>
        <label>Código para cargas</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_APP_Wallet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>APP Wallet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_ATM_Requiere__c</fullName>
        <description>Campo para la aplicación Workflow ubicado en el page layout de Alianzas Comerciales, se selecciona de acuerdo al valor de un multipicklist</description>
        <formula>INCLUDES ( CRM_WF_Canales_de_Comunicacion__c , &quot;ATM&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ATM ¿Requiere?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Alianzas_Comerciales__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Alianzas Comerciales</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Alianzas__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alianzas</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Area_Solicitante__c</fullName>
        <label>Área Solicitante</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CRM_WF_Tipo_De_Area_Solicitante__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Alianzas Comerciales</fullName>
                </value>
                <value>
                    <fullName>Asset Management</fullName>
                </value>
                <value>
                    <fullName>Banca Comercial</fullName>
                </value>
                <value>
                    <fullName>Banca de Empresas y Gobierno</fullName>
                </value>
                <value>
                    <fullName>Bancario</fullName>
                </value>
                <value>
                    <fullName>Banco Uso</fullName>
                </value>
                <value>
                    <fullName>BBVA Real Estate</fullName>
                </value>
                <value>
                    <fullName>Canales</fullName>
                </value>
                <value>
                    <fullName>Consumer Finance</fullName>
                </value>
                <value>
                    <fullName>Corporativa y Mercados</fullName>
                </value>
                <value>
                    <fullName>DANF</fullName>
                </value>
                <value>
                    <fullName>Educación Financiera</fullName>
                </value>
                <value>
                    <fullName>Express</fullName>
                </value>
                <value>
                    <fullName>Fianzia Uso</fullName>
                </value>
                <value>
                    <fullName>Fundación Bancomer</fullName>
                </value>
                <value>
                    <fullName>Hipotecario</fullName>
                </value>
                <value>
                    <fullName>Inmuebles</fullName>
                </value>
                <value>
                    <fullName>Otra</fullName>
                </value>
                <value>
                    <fullName>Pensiones</fullName>
                </value>
                <value>
                    <fullName>Recursos Humanos</fullName>
                </value>
                <value>
                    <fullName>Seguros/Wibe</fullName>
                </value>
                <value>
                    <fullName>SQUAD_ADQUIRENCIA</fullName>
                </value>
                <value>
                    <fullName>SQUAD_APPS_VERTICALES</fullName>
                </value>
                <value>
                    <fullName>SQUAD_CLIENTES_CLAVE</fullName>
                </value>
                <value>
                    <fullName>SQUAD_CONSUMO</fullName>
                </value>
                <value>
                    <fullName>SQUAD_CUENTAS</fullName>
                </value>
                <value>
                    <fullName>SQUAD_DIGITALIZACION</fullName>
                </value>
                <value>
                    <fullName>SQUAD_DIY_Digital_Servicing</fullName>
                </value>
                <value>
                    <fullName>SQUAD_INVERSIONES</fullName>
                </value>
                <value>
                    <fullName>SQUAD_MEDIOS_PAGO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Atm__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ATM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_BCA_EyG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bca EyG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Bancario_Alto__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bancario Alto</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Bancario_Bajo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bancario Bajo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Bancario_Estandar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bancario Estándar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Bancomer_Inf__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bancomer Inf</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Bases_Enviadas__c</fullName>
        <label>Bases enviadas</label>
        <summarizedField>CRM_WF_Cartas_Origen__c.CRM_WF_Numero_De_Bases_Enviadas__c</summarizedField>
        <summaryForeignKey>CRM_WF_Cartas_Origen__c.CRM_WF_Campana_Carta_Custodia__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Bcom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bcom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Bmovil__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bancomer movil</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Boletin_Emp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Boletín Emp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Buzon_Squad__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Buzón Squad</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Canales__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Canales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Canales_de_Comunicacion__c</fullName>
        <label>Canales de Comunicación</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ATM</fullName>
                </value>
                <value>
                    <fullName>Bcom</fullName>
                    <label>Bancomercom</label>
                </value>
                <value>
                    <fullName>Bancomer Inf</fullName>
                </value>
                <value>
                    <fullName>Bmovil</fullName>
                    <label>Bancomer movil</label>
                </value>
                <value>
                    <fullName>BBVA Wallet</fullName>
                </value>
                <value>
                    <fullName>Boletín Emp</fullName>
                </value>
                <value>
                    <fullName>Cenefa</fullName>
                </value>
                <value>
                    <fullName>Correo directo</fullName>
                </value>
                <value>
                    <fullName>EECC</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Email Individual</fullName>
                </value>
                <value>
                    <fullName>Email Multipromociones</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>Insertos</fullName>
                </value>
                <value>
                    <fullName>IVR</fullName>
                </value>
                <value>
                    <fullName>Listados</fullName>
                </value>
                <value>
                    <fullName>Marketing Dinámico</fullName>
                </value>
                <value>
                    <fullName>Mundo TDC</fullName>
                </value>
                <value>
                    <fullName>Pauta Digital</fullName>
                </value>
                <value>
                    <fullName>Podio</fullName>
                </value>
                <value>
                    <fullName>Portal Vida Bancomer</fullName>
                </value>
                <value>
                    <fullName>Prensa</fullName>
                </value>
                <value>
                    <fullName>Publicación en sitio Descuentos</fullName>
                </value>
                <value>
                    <fullName>Push Notification</fullName>
                </value>
                <value>
                    <fullName>Radio</fullName>
                </value>
                <value>
                    <fullName>Redes Sociales Dirigidas</fullName>
                </value>
                <value>
                    <fullName>Redes Sociales Masivas</fullName>
                </value>
                <value>
                    <fullName>Sdat</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>Telemarketing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Cartas_Recibidas__c</fullName>
        <inlineHelpText>Cartas recurrentes que fueron procesadas y las bases correspondientes enviadas al proveedor</inlineHelpText>
        <label>Cartas Recurrentes Procesadas</label>
        <summarizedField>CRM_WF_Cartas_Origen__c.CRM_WF_Salidas_Recibidas__c</summarizedField>
        <summaryForeignKey>CRM_WF_Cartas_Origen__c.CRM_WF_Campana_Carta_Custodia__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Cenefa__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cenefa</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Checklists_aprobados__c</fullName>
        <label>Checklists aprobados</label>
        <summaryFilterItems>
            <field>CRM_WF_Checklist__c.CRM_WF_Estatus_Checklist__c</field>
            <operation>equals</operation>
            <value>Aprobado</value>
        </summaryFilterItems>
        <summaryForeignKey>CRM_WF_Checklist__c.CRM_WF_Nombre_Estrategia_Proyecto__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Checklists_creados__c</fullName>
        <inlineHelpText>Número de Checklists creados por el equipo de Implementación</inlineHelpText>
        <label>Checklists creados</label>
        <summaryForeignKey>CRM_WF_Checklist__c.CRM_WF_Nombre_Estrategia_Proyecto__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Con_Comunicacion__c</fullName>
        <label>¿Con Comunicación?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sí</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Con_Criterios__c</fullName>
        <label>Con Criterios</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sí</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Con_Modelo__c</fullName>
        <label>Con Modelo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sí</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Con_VoBo_Seguimiento__c</fullName>
        <label>Con VoBo Seguimiento</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                    <default>true</default>
                    <label>Si</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Contratacion_Clientes__c</fullName>
        <label>Contratación Clientes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Contratacion_Grupo_Control__c</fullName>
        <label>Contratación Grupo Control</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Correo_Directo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Correo Directo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Criterios_De_Ic__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Criterios de I.C.</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Criterios_De_La_Base__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Criterios de la Base</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Cuantitativo__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cuantitativo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_EECC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EECC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_EMAIL_INDIVIDUAL_Requiere__c</fullName>
        <description>Campo para la aplicación Workflow ubicado en el page layout de Alianzas Comerciales, se selecciona de acuerdo al valor de un multipicklist</description>
        <formula>INCLUDES ( CRM_WF_Canales_de_Comunicacion__c , &quot;Email Individual&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Individual ¿Requiere?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Efectividad_Clientes__c</fullName>
        <formula>CRM_WF_Contratacion_Clientes__c /  CRM_WF_Oferta_Clientes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Efectividad Clientes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Efectividad_Grupo_Control__c</fullName>
        <formula>CRM_WF_Contratacion_Grupo_Control__c /  CRM_WF_Oferta_Grupo_Control__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Efectividad Grupo Control</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Email_Multipromociones_Requiere__c</fullName>
        <description>Campo para la aplicación Workflow ubicado en el page layout de Alianzas Comerciales, se selecciona de acuerdo al valor de un multipicklist</description>
        <formula>INCLUDES ( CRM_WF_Canales_de_Comunicacion__c , &quot;Email Multipromociones&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Multipromociones	 ¿Requiere?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Enviar_alerta__c</fullName>
        <formula>IF((ISPICKVAL (CRM_WF_Area_Solicitante__c , &quot;SQUAD_ADQUIRENCIA&quot;) &amp;&amp; (ISPICKVAL (Status, &quot;Vo.Bo. Seguimiento&quot;))), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>¿Enviar alerta?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Especificar_Otro_Canal__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Especificar Otro Canal</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Estatus_Cambio_Prioridad_Urg__c</fullName>
        <label>Estatus de Cambio a Prioridad Urgente</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aprobado</fullName>
                </value>
                <value>
                    <fullName>Rechazado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Estatus_De_Seguimiento__c</fullName>
        <label>Estatus de Seguimiento</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pendiente</fullName>
                    <default>true</default>
                    <label>Pendiente</label>
                </value>
                <value>
                    <fullName>Aprobado</fullName>
                </value>
                <value>
                    <fullName>Rechazado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Estatus_De_Validacion__c</fullName>
        <label>Estatus Validación</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aprobado</fullName>
                </value>
                <value>
                    <fullName>Rechazado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Express__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Express</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_FIC__c</fullName>
        <formula>IF(OR(ISPICKVAL( CRM_WF_Area_Solicitante__c , &quot;SQUAD_ADQUIRENCIA&quot;),  RecordType.Name = &quot;Multipromoción&quot;), &quot;ADQ&quot; +  CRM_WF_Folio__c ,
IF(ISPICKVAL( CRM_WF_Area_Solicitante__c , &quot;SQUAD_CLIENTES_CLAVE&quot;), &quot;CCV&quot; +  CRM_WF_Folio__c ,
IF(ISPICKVAL( CRM_WF_Area_Solicitante__c , &quot;SQUAD_MEDIOS_PAGO&quot;), &quot;TDC&quot; +  CRM_WF_Folio__c ,
IF(ISPICKVAL( CRM_WF_Area_Solicitante__c , &quot;SQUAD_DIGITALIZACION&quot;), &quot;DIG&quot;+  CRM_WF_Folio__c ,
IF(ISPICKVAL( CRM_WF_Area_Solicitante__c , &quot;SQUAD_DIY_Digital_Servicing&quot;), &quot;DIY&quot;+  CRM_WF_Folio__c ,
IF(ISPICKVAL( CRM_WF_Area_Solicitante__c , &quot;SQUAD_PYME&quot;), &quot;PYME-&quot; +  CRM_WF_Folio__c ,
IF(ISPICKVAL( CRM_WF_Area_Solicitante__c , &quot;SQUAD_INVERSIONES&quot;), &quot;INV&quot; +  CRM_WF_Folio__c ,
IF(ISPICKVAL( CRM_WF_Area_Solicitante__c , &quot;SQUAD_CONSUMO&quot;), &quot;CON&quot; +  CRM_WF_Folio__c ,
IF(ISPICKVAL( CRM_WF_Area_Solicitante__c , &quot;SQUAD_SEGUROS_AUTO&quot;), &quot;SEGA&quot; +  CRM_WF_Folio__c ,
IF(ISPICKVAL( CRM_WF_Area_Solicitante__c , &quot;SQUAD_SEGUROS_SALUD&quot;), &quot;SEGVS&quot; +  CRM_WF_Folio__c ,
IF(ISPICKVAL( CRM_WF_Area_Solicitante__c , &quot;SQUAD_SEGUROS_DANOS&quot;), &quot;SEGD&quot; +  CRM_WF_Folio__c ,
IF(ISPICKVAL( CRM_WF_Area_Solicitante__c , &quot;SQUAD_NOMINA&quot;), &quot;NOM&quot; +  CRM_WF_Folio__c ,
IF(ISPICKVAL( CRM_WF_Area_Solicitante__c , &quot;SQUAD_CUENTAS&quot;), &quot;CTA&quot; +  CRM_WF_Folio__c ,
IF(ISPICKVAL( CRM_WF_Area_Solicitante__c , &quot;SQUAD_APPS_VERTICALES&quot;), &quot;APP&quot; +  CRM_WF_Folio__c ,
IF(ISPICKVAL( CRM_WF_Area_Solicitante__c , &quot;SQUAD_TODOS&quot;), &quot;ALL&quot; +  CRM_WF_Folio__c ,
IF(ISPICKVAL( CRM_WF_Area_Solicitante__c , &quot;Alianzas Comerciales&quot;), &quot;ALC&quot; +  CRM_WF_Folio__c ,
IF(ISPICKVAL( CRM_WF_Area_Solicitante__c , &quot;Asset Management&quot;), &quot;ASS&quot; +  CRM_WF_Folio__c ,
IF(ISPICKVAL( CRM_WF_Area_Solicitante__c , &quot;Banca Comercial&quot;), &quot;BCO&quot; +  CRM_WF_Folio__c ,
IF(ISPICKVAL( CRM_WF_Area_Solicitante__c , &quot;Banca de Empresas y Gobierno&quot;), &quot;BEG&quot; +  CRM_WF_Folio__c ,
IF(ISPICKVAL( CRM_WF_Area_Solicitante__c , &quot;Bancario&quot;), &quot;BAN&quot; +  CRM_WF_Folio__c ,
IF(ISPICKVAL( CRM_WF_Area_Solicitante__c , &quot;Banco Uso&quot;), &quot;BAU&quot; +  CRM_WF_Folio__c ,
IF(ISPICKVAL( CRM_WF_Area_Solicitante__c , &quot;BBVA Real Estate&quot;), &quot;BRE&quot; +  CRM_WF_Folio__c ,
IF(ISPICKVAL( CRM_WF_Area_Solicitante__c , &quot;Canales&quot;), &quot;CAN&quot; +  CRM_WF_Folio__c ,
IF(ISPICKVAL( CRM_WF_Area_Solicitante__c , &quot;Consumer Finance&quot;), &quot;CF&quot; +  CRM_WF_Folio__c ,
IF(ISPICKVAL( CRM_WF_Area_Solicitante__c , &quot;Corporativa y Mercados&quot;), &quot;CYM&quot; +  CRM_WF_Folio__c ,
IF(ISPICKVAL( CRM_WF_Area_Solicitante__c , &quot;DANF&quot;), &quot;DANF&quot; +  CRM_WF_Folio__c ,
IF(ISPICKVAL( CRM_WF_Area_Solicitante__c , &quot;Educación Financiera&quot;), &quot;EDF&quot; +  CRM_WF_Folio__c ,
IF(ISPICKVAL( CRM_WF_Area_Solicitante__c , &quot;Express&quot;), &quot;EXP&quot; +  CRM_WF_Folio__c ,
IF(ISPICKVAL( CRM_WF_Area_Solicitante__c , &quot;Fianzia Uso&quot;), &quot;FIU&quot; +  CRM_WF_Folio__c ,
IF(ISPICKVAL( CRM_WF_Area_Solicitante__c , &quot;Fundación Bancomer&quot;), &quot;FB&quot; +  CRM_WF_Folio__c ,
IF(ISPICKVAL( CRM_WF_Area_Solicitante__c , &quot;Hipotecario&quot;), &quot;HIP&quot; +  CRM_WF_Folio__c ,
IF(ISPICKVAL( CRM_WF_Area_Solicitante__c , &quot;Inmuebles&quot;), &quot;INM&quot; +  CRM_WF_Folio__c ,
IF(ISPICKVAL( CRM_WF_Area_Solicitante__c , &quot;Otra&quot;), &quot;OTR&quot; +  CRM_WF_Folio__c ,
IF(ISPICKVAL( CRM_WF_Area_Solicitante__c , &quot;Pensiones&quot;), &quot;PEN&quot; +  CRM_WF_Folio__c ,
IF(ISPICKVAL( CRM_WF_Area_Solicitante__c , &quot;Recursos Humanos&quot;), &quot;RH&quot; +  CRM_WF_Folio__c ,
IF(ISPICKVAL( CRM_WF_Area_Solicitante__c , &quot;Seguros/Wibe&quot;), &quot;SEGW&quot; +  CRM_WF_Folio__c ,
IF(ISPICKVAL( CRM_WF_Area_Solicitante__c , &quot;Open Market TDC&quot;), &quot;OMTDC&quot; +  CRM_WF_Folio__c ,
IF(ISPICKVAL( CRM_WF_Area_Solicitante__c , &quot;Open Market Auto&quot;), &quot;OMAUT&quot; +  CRM_WF_Folio__c ,
IF(ISPICKVAL( CRM_WF_Area_Solicitante__c , &quot;Open Market Hipotecario&quot;), &quot;OMHIP&quot; +  CRM_WF_Folio__c ,
&quot;&quot;)))))))))))))))))))))))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FIC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Facebook__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Facebook</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Fecha_Deseada_De_Entrega__c</fullName>
        <formula>TEXT ( EndDate + 7)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fecha deseada de entrega</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Filiales__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Filiales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Folio__c</fullName>
        <displayFormat>{YY}{MM}{0000}</displayFormat>
        <inlineHelpText>Folio Identificador de Campaña</inlineHelpText>
        <label>Folio General</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Formula_Comercio__c</fullName>
        <description>Campo para la aplicación de Workflow de tipo Fórmula que trae el Valor de un Comercio elegido desde el Asistente de Captura</description>
        <formula>GBL_WF_Comercios__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Comercio</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Ganadores__c</fullName>
        <label>Ganadores</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sí</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Giro_Comercial__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Giro Comercial</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_IVR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IVR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Identificador_POB__c</fullName>
        <formula>IF ( AND(RecordType.Name = &quot;Alianzas Comerciales&quot; , ISPICKVAL(CRM_WF_Area_Solicitante__c, &quot;SQUAD_ADQUIRENCIA&quot;) ), 1,
IF ( CONTAINS( TEXT(CRM_WF_Area_Solicitante__c) , &quot;SEGUROS&quot;) , 3,
2)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Identificador POB</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Indicadores_De_Seleccion__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Indicadores de Selección</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Indicadores_Requeridos__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>¿Qué se desea medir?</inlineHelpText>
        <label>Indicadores Requeridos</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Informativa__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Informativa</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Insertos__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Insertos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Inversiones__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inversiones</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Justificacion_De_Desestimacion__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Justificación de desestimación</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Justificacion_del__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Justificación de prioridad</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_KPI_Objetivo__c</fullName>
        <label>KPI Objetivo</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Activación</fullName>
                </value>
                <value>
                    <fullName>Adquisición</fullName>
                </value>
                <value>
                    <fullName>Uso</fullName>
                </value>
                <value>
                    <fullName>Retención</fullName>
                </value>
                <value>
                    <fullName>Informativa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Landing_Page__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Landing Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Layout_De_Ganadores__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Layout de Ganadores</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Legal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Leyenda_Del_SMS__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Con VoBo de Marketing</inlineHelpText>
        <label>Leyenda del SMS del mensaje</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Leyenda_Push_Notification__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Leyenda Push Notification</label>
        <length>119</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Leyenda_WL_Corto__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Leyenda Wallet Corto</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Leyenda_Wallet_Largo__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Leyenda Wallet Largo</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Listado__c</fullName>
        <label>Listado</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Vida Bancomer</fullName>
                </value>
                <value>
                    <fullName>Commerce 360</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Listados__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Listados</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Mapa_Wallet_Requiere__c</fullName>
        <description>Campo para la aplicación Workflow ubicado en el page layout de Alianzas Comerciales, se selecciona de acuerdo al valor de un multipicklist</description>
        <formula>INCLUDES ( CRM_WF_Canales_de_Comunicacion__c , &quot;Wallet Loyalty Mapa&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mapa Wallet ¿Requiere?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Marketing_Dinamico_Requiere__c</fullName>
        <description>Campo para la aplicación Workflow ubicado en el page layout de Alianzas Comerciales, se selecciona de acuerdo al valor de un multipicklist</description>
        <formula>INCLUDES ( CRM_WF_Canales_de_Comunicacion__c , &quot;Marketing Dinámico&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketing Dinámico ¿Requiere?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Marketing_Dinamico__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Dinámico</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Mensaje_En_El_Voucher__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mensaje en el voucher de tarjetahabiente</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Modelo__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Modelo</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Monitoreo_de_Prioridad__c</fullName>
        <formula>IF( ISPICKVAL (CRM_WF_Prioridad_del__c, &quot;Urgente&quot;), IMAGE(&quot;/servlet/servlet.FileDownload?file=0151U000001YpSo&quot;, &quot;Urgente&quot; ), &quot;Normal&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monitoreo de Prioridad</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Mundo_TDC_Requiere__c</fullName>
        <description>Campo para la aplicación Workflow ubicado en el page layout de Alianzas Comerciales, se selecciona de acuerdo al valor de un multipicklist</description>
        <formula>INCLUDES ( CRM_WF_Canales_de_Comunicacion__c , &quot;Mundo TDC&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mundo TDC ¿Requiere?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Numero_De_Cartas_Origen__c</fullName>
        <label>Número de Cartas Origen</label>
        <summaryForeignKey>CRM_WF_Cartas_Origen__c.CRM_WF_Campana_Carta_Custodia__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Numero_de_Briefs_Aprobados__c</fullName>
        <label>Número de Briefs Aprobados</label>
        <summaryFilterItems>
            <field>CRM_WF_Brief__c.CRM_WF_Etapa_Brief__c</field>
            <operation>equals</operation>
            <value>Aprobado</value>
        </summaryFilterItems>
        <summaryForeignKey>CRM_WF_Brief__c.CRM_WF_Campana_Brief__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>